# shipping-delivery-promise

./: .gitignore  README.md  README_v2.md  operational_modeling.md  pyproject.toml
.jupyter_config/: migrated
.mplconfig/: fontlist-v390.json
artifacts/point_model/: feature_importance.csv  metrics.json  model.pkl  model_config_snapshot.yaml  predictions_test.csv  predictions_val.csv
artifacts/policy_analysis/: policy_metrics_test.csv  policy_metrics_val.csv  policy_summary.json
artifacts/quantile_model/: feature_importance_q10.csv  feature_importance_q25.csv  feature_importance_q50.csv  feature_importance_q80.csv  feature_importance_q90.csv  feature_importance_q95.csv  interval_predictions_test.csv  interval_predictions_val.csv  metrics.json  q10_model.pkl  q25_model.pkl  q50_model.pkl  q80_model.pkl  q90_model.pkl  q95_model.pkl
config/: dataset_config.yaml  model_config.yaml
docs/: architecture.md  architecture_v2.md  assumptions.md  assumptions_v2.md  dataset.md  modeling.md  operational_modeling.md  policy_and_metrics.md  problem_framing.md  problem_framing_v2.md  problem_framing_v3.md  prompt_log.md
notebooks/: eda.ipynb  results_demo.ipynb
specs/: 01_dataset_construction_spec.md  02_point_prediction_spec.md  03_quantile_model_spec.md  04_policy_spec.md
src/: __init__.py  build_dataset.py  config_utils.py  evaluate_policy.py  train_model.py  train_quantiles.py
src/mercado_envios_challenge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_build_dataset.py
